# videoEditor

./: .gitignore  CMakeLists.txt  commandhistory.h  fileviewer.cpp  fileviewer.h  fileviewer.ui  icon.qrc  imageeditor.cpp  imageeditor.h  imageprocessor.cpp  imageprocessor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scrollareahelper.cpp  scrollareahelper.h  videoeditor.cpp  videoeditor.h  videoprocessor.cpp  videoprocessor.h  videotimeline.cpp  videotimeline.h  videotimeline.ui
file/: fileviewer.cpp  fileviewer.h  fileviewer.ui
history/: commandhistory.cpp  commandhistory.h
image/: imageeditor.cpp  imageeditor.h  imageeditor.ui  imageocr.cpp  imageocr.h
utils/: MatImageConvert.h
video/: videoeditor.cpp  videoeditor.h  videoeditor.ui
video/clip/: AudioClip.h  ClipBase.h  ImageClip.cpp  ImageClip.h  TextClip.h  VideoClip.cpp  VideoClip.h  audioclip.h  clipbase.h  imageclip.h  textclip.h  videoclip.cpp  videoclip.h
video/clip/form/: ClipForm.cpp  ClipForm.h  ClipForm.ui
video/effect/: MatEffect.cpp  MatEffect.h
video/preview/: ClipsPreview.cpp  ClipsPreview.h
video/render/: VideoRender.cpp  VideoRender.h
video/timeline/: videotimeline.cpp  videotimeline.h  videotimelinetrack.cpp  videotimelinetrack.h  videotimelinetrack.ui
